# data-engineer-toolkit

./: .env  .gitignore  LICENSE  Makefile  README.md  airflow.Dockerfile  docker-compose.yml  docker-compose_all-spark-notebook-airflow.yml  docker-compose_all-spark-notebook.yml  docker-compose_kafka.yml  jupyter.Dockerfile  pyproject.toml  requirements.txt  run_tests.py  teste
airflow/data/events/2023-10-01/: events.json
airflow/data/events/2023-10-02/: events.json
airflow/data/events/2023-10-03/: events.json
airflow/data/events/2023-10-04/: events.json
airflow/data/events/2023-10-05/: events.json
airflow/data/events/2023-10-06/: events.json
airflow/data/events/2023-10-07/: events.json
airflow/data/events/2023-10-08/: events.json
airflow/data/events/2023-10-09/: events.json
datalake/.minio.sys/: format.json
jupyter_work/: Spark_Delta.ipynb  validar_acesso_spark-master.ipynb  validar_dados_airflow.ipynb  validar_salvar_delta.ipynb
spark/build-image/: build_from_make.bat  build_from_make.sh
spark/build-image/base/: Dockerfile
spark/conf/: spark-defaults.conf
spark/scripts/: validacao_ambiente.py
src/orquestracao/: dag_debug_variables.py  dag_jinja.py  dag_ola_mundo.py  dag_ola_mundo_backfill.py  dag_ola_mundo_data_incremental.py  dag_ola_mundo_start_e_end.py  dag_ola_mundo_time_delta.py  dag_virtualenv.py  dag_wikimedia_python_operator.py  example_spark_operator.py  example_validacao_ambiente.py  operadores.py
src/spark/: pi.py  validacao_ambiente.py
src/utils/: generate_mock.py
tests/orquestracao/operators/: test_python_operator.py
(+25 files in other folders)
